--- a/DB1.AvaliacaoTecnica/DB1.AvaliacaoTecnica/DB1.AvaliacaoTecnica/Exercicio1.html
+++ b/DB1.AvaliacaoTecnica/DB1.AvaliacaoTecnica/DB1.AvaliacaoTecnica/Exercicio1.html
@@ -1,7 +1,7 @@
-ï»¿<!DOCTYPE html>
-<html ng-app="Db1Avaliacao">
+<!DOCTYPE html>
+<html>
 <head>
-    <title>DB1 Global Software - AvaliaÃ§Ã£o TÃ©cnica</title>
+    <title>DB1 Global Software - Avaliação Técnica</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8" />
     <link href="/resources/icons/favicon.ico" rel="icon" type="image/x-icon">
@@ -18,12 +18,12 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">AvaliaÃ§Ã£o TÃ©cnica</a>
+                <a class="navbar-brand" href="#">Avaliação Técnica</a>
             </div>
             <div class="collapse navbar-collapse" id="navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="#/home">Home</a></li>
-                    <li><a href="#/exercicio1">ExercÃ­cio 1</a></li>
+                    <li><a href="#/">Home</a></li>
+                    <li><a href="#/Exercicio1">Exercício 1</a></li>
                 </ul>
             </div>
         </div>
@@ -43,8 +43,5 @@
 
     <script src="app/app.module.js"></script>
     <script src="app/app.config.js"></script>
-    <script src="app/routes.js"></script>
-    <script src="app/controllers/ExercicioCtrl.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/X.Y.Z/angular-route.js"></script>
 </body>
 </html>
